--- a/sections/Results_DifferentialCrossSections.tex
+++ b/sections/Results_DifferentialCrossSections.tex
@@ -1,12 +1,11 @@
 \section{ Unfolded Differential Cross-sections }
 \label{sec:DifferentialxS}
 
-The background-subtracted data yield is unfolded using the iterative Bayesian Unfolding discussed in Section \ref{sec:Unfolding}. The unfolded differential cross-sections, the main results of this thesis, are obtained by multiplying the inverse of integrated luminosity to the background-subtracted unfolded yield in each bin. The unfolded differential cross-sections for eleven kinematic observables are shown in figures \ref{fig:unfolded_xs_VBS_Enhanced_a} and \ref{fig:unfolded_xs_VBS_Enhanced_b}. 
+The background-subtracted data is unfolded using the iterative Bayesian Unfolding discussed in Section \ref{sec:Unfolding}. The unfolded differential cross-sections, the main results of this thesis, are obtained by multiplying the inverse of integrated luminosity to the background-subtracted unfolded yield in each bin. The unfolded differential cross-sections for eleven kinematic observables are shown in Figures \ref{fig:unfolded_xs_VBS_Enhanced_a} and \ref{fig:unfolded_xs_VBS_Enhanced_b}. 
 
-Each distribution of unfolded differential cross-sections in black is compared to two different state-of-the-art particle-level SM predictions in red and blue. The red distribution represents the SM particle level differential cross-sections where the QCD $qqZZjj$ contribution is predicted by \textsc{Sherpa} generator.
-Similarly, in the blue distribution, the QCD $qqZZjj$ contribution is predicted by \textsc{Madgraph} generator. The light-red and light-blue bands are the fiducial level systematics on the particle-level yield, respectively, by \textsc{Sherpa} and \textsc{Madgraph}. The vertical-solid line on the unfolded data points is the statistical uncertainty, whereas the black band represents the total systematic uncertainties from theoretical, experimental, and unfolding sources. The unfolded cross-sections are limited by statistical precision in all distributions and all bins. For some distributions, one or two events are found in the overflow bin resulting from bin migrations. These events are added to the content of the last bin of the unfolded distribution. 
+Each distribution of unfolded differential cross-sections is compared to two different state-of-the-art particle-level SM predictions; the first prediction where the QCD $qqZZjj$ contribution is predicted by \textsc{Sherpa} generator, and the second prediction where the QCD $qqZZjj$ contribution is predicted by \textsc{Madgraph} generator. The light-red and light-blue bands are the fiducial level systematics on the \textsc{Sherpa} and \textsc{Madgraph} particle-level cross-sections, respectively. The vertical-solid line on the unfolded cross-sections is the statistical uncertainty. In contrast, the black band represents the total systematic uncertainties on unfolded cross-sections from theoretical, experimental, and unfolding sources. The unfolded cross-sections are limited by statistical precision in all distributions and all bins. For some distributions, one or two events are found in the overflow bin resulting from bin migrations. These events are added to the content of the last bin of the unfolded distribution. 
 
-Generally, for all distributions, the data is well modeled by the MC simulations within $2\sigma$ of the uncertainty band. Two different p-values are determined by comparing unfolded cross-sections to the two predicted cross-sections to quantify the agreement between the experimentally measured unfolded and the SM-predicted cross-sections. The p-value is calculated based on a technique discussed in Ref\cite{pValueStat} by taking the residual and uncertainties of two weighted histograms. For all kinematic observables, the reported p-values obtained by comparing to either generator are more significant than $0.05$. Therefore, in the analyzed LHC Run-2 dataset, for the $ZZ (\rightarrow 4) \ell jj$ process, all differential cross-sections in the VBS-Enhanced region are concluded to agree with the SM predictions. 
+Generally, for all distributions, the data is well modeled by the MC simulations within $2\sigma$ of the uncertainty band. Two different p-values are determined by comparing unfolded cross-sections to the two predicted cross-sections to quantify the agreement between the experimentally measured unfolded data and the SM-predicted cross-sections. The p-values are calculated based on a technique discussed in Ref\cite{pValueStat} by taking the residual and uncertainties of two weighted histograms. For all kinematic observables, the reported p-values obtained by comparing to either generator are more significant than $0.05$. Therefore, in the analyzed LHC Run-2 dataset, for the $ZZ (\rightarrow 4 \ell) jj$ process, all differential cross-sections in the VBS-Enhanced region are concluded to agree with the SM predictions. 
 
 \begin{figure}[!htb]
     \centering
