--- a/thesis.tex
+++ b/thesis.tex
@@ -171,7 +171,8 @@ This thesis presents the cross-section measurements of two Z bosons production i
 \begin{appendices}
    \LARGE{\textbf{Appendices}} \\ 
    \normalsize 
-	Supplementary materials to the main body of this thesis are presented in the following appendices. Appendix \ref{Appendix:Contribution} summarizes my contributions to the measurement presented in this thesis and to the ATLAS experiment. The largest source of systematic uncertainty on the results is the unfolding bias; thus, Appendix \ref{Appendix:Unfolding_bias} summarizes the studies conducted to understand the source of this bias. Finally, Appendix \ref{Appendix:VBSSupRegion} presents the differential unfolded cross-sections measured in the VBS-suppressed region of the phase space. 
+   Supplementary materials to the main body of this thesis are presented in the following appendices. Appendix \ref{Appendix:Contribution} summarizes my contributions to the measurement presented in this thesis as well as to the ATLAS experiment. The largest source of systematic uncertainty on the results is the unfolding bias; thus, Appendix \ref{Appendix:Unfolding_bias} summarizes the studies conducted to understand the source of this bias. Finally, Appendix \ref{Appendix:VBSSupRegion} presents the detector-level measurements, and the differential unfolded cross-sections measured in the VBS-suppressed region of the phase space. 
+ 
 
 	\include{sections/Appendix}
 \end{appendices}
