--- a/sections/Analysis_Systematics.tex
+++ b/sections/Analysis_Systematics.tex
@@ -1,4 +1,4 @@
-The differential cross-section measurements discussed in this thesis are affected by three sources of systematic uncertainties, experimental sources, theoretical sources, and intrinsic systematics related to the unfolding process. The statistical uncertainty of the measurements is dominant as data statistics limit the cross-section measurements. This section discusses the source of theoretical, experimental, unfolding uncertainties and propagation of the statistical uncertainties to the unfolded cross-sections. 
+The differential cross-section measurements discussed in this thesis are affected by three sources of systematic uncertainties, experimental sources, theoretical sources, and intrinsic systematics related to the unfolding process. The statistical uncertainty of the measurements is dominant as data statistics limit the cross-section measurements. This section discusses the source of theoretical, experimental, and unfolding uncertainties and the propagation of statistical and systematic uncertainties to the final unfolded cross-section measurements. 
 
 \subsection{Theoretical Uncertainties}
 \label{subsec:TheoryUnc}
@@ -6,14 +6,14 @@ The differential cross-section measurements discussed in this thesis are affecte
 The following sources of theoretical uncertainties are considered in the measurement.
 
 \begin{itemize}
-\item{\textbf{Uncertainties on QCD Scale:} As discussed in Section \ref{sec:Pheno}, the theoretical predictions of cross-sections depend on the factorization scale ($\mu_{F}$) and renormalization scale ($\mu_{R}$) \cite{QCDScaleAndPDFUnc}. To account for this dependence, a QCD scale uncertainty is evaluated by scaling $\mu_{F}$ and $\mu_{R}$ independently using on-the-fly variations provided by the MC generators. The variations constitute of six-point variations of $\mu_{F}$ and $\mu_{R}$ from $-50\%$ or $+100\%$ around their nominal values of 1, such that \{$\mu_R = 0.5, \mu_F = 0.5$\}, \{$\mu_R = 0.5, \mu_F = 1.0$\}, \{$\mu_R = 1.0, \mu_F = 0.5$\}, \{$\mu_R = 1.0, \mu_F = 2.0$\}, \{$\mu_R = 2.0, \mu_F = 1.0$\}, and \{$\mu_R = 2.0, \mu_F = 2.0$\}. The final uncertainty is evaluated as the absolute envelope of the six variations. The QCD scale uncertainties are evaluated for $qqZZ$, $ggZZ$, and $EWK qqZZjj$ samples.
+\item{\textbf{Uncertainties on QCD Scale:} As discussed in Section \ref{sec:Pheno}, the theoretical predictions of cross-sections depend on the factorization scale ($\mu_{F}$) and renormalization scale ($\mu_{R}$) \cite{QCDScaleAndPDFUnc}. To account for this dependence, a QCD scale uncertainty is evaluated by scaling $\mu_{F}$ and $\mu_{R}$ independently using on-the-fly variations provided by the MC generators. The variations constitute of six-point variations of $\mu_{F}$ and $\mu_{R}$ from $-50\%$ to $+100\%$ around their nominal values of 1, such that \{$\mu_R = 0.5, \mu_F = 0.5$\}, \{$\mu_R = 0.5, \mu_F = 1.0$\}, \{$\mu_R = 1.0, \mu_F = 0.5$\}, \{$\mu_R = 1.0, \mu_F = 2.0$\}, \{$\mu_R = 2.0, \mu_F = 1.0$\}, and \{$\mu_R = 2.0, \mu_F = 2.0$\}. The final uncertainty is evaluated as the absolute envelope of the six variations. The QCD scale uncertainties are evaluated individually for $qqZZ$, $ggZZ$, and $EWK~ qqZZjj$ samples.
 }
-\item{\textbf{Uncertainties on PDF $\&$ $\alpha_{S}$:} The cross-sections also depend on the choice of the PDF used by the MC generators. Thus, the PDF uncertainty for Sherpa and \textsc{MadGraph5} samples that use NNPDF3.0NNLO is evaluated using the prescription described in Ref \cite{PDFForRunII} using on-the-fly variation weights. The PDF variations include a set of 100 internal variations, two additional variations from the nominal PDF reweighted to the alternative MMHT2014nnlo \cite{MMHT2014PDFs} $\&$ CT14nnlo \cite{CT14nnlo} PDF sets, and variations of the strong coupling constant by $\pm0.0001$ where the nominal value of $\alpha_{S}$ is $0.118$. The total uncertainty is taken as the absolute envelope of all standard deviations of $100$ internal variations, the two alternate PDF variations, added in quadrature with the envelope of the $\alpha_{S}$ variations, 
+\item{\textbf{Uncertainties on PDF $\&$ $\alpha_{S}$:} The cross-sections also depend on the choice of the PDF used by the MC generators. Thus, the PDF uncertainty for Sherpa and \textsc{MadGraph5} samples that use NNPDF3.0NNLO is evaluated using the prescription described in Ref \cite{PDFForRunII} using on-the-fly variation weights. The PDF variations include a set of 100 internal variations, two additional variations from the nominal PDF reweighted to the alternative MMHT2014nnlo \cite{MMHT2014PDFs} $\&$ CT14nnlo \cite{CT14nnlo} PDF sets and variations of the strong coupling constant by $\pm0.001$ around the nominal value of $\alpha_{S}$ is $0.118$. The total uncertainty is taken as the absolute envelope of all standard deviations of $100$ internal variations and the two alternate PDF variations, added in quadrature with the envelope of the $\alpha_{S}$ variations, 
 \begin{equation}
     \sigma_{PDF}^{NNPDF3.0NNLO} = \sqrt{ [ max (\sigma_{std.~dev.~int.}, |\sigma_{MMHT2014nnlo}| , |\sigma_{CT14nnlo}|~)]^2 + \sigma_{\alpha_S}^2 }
 \end{equation}
 
-The PDF uncertainty is evaluated for $qqZZ$, $ggZZ$ and \textsc{MadGraph5} $EWK qqZZjj$ samples.
+The PDF uncertainty is evaluated individually for $qqZZ$, $ggZZ$, and \textsc{MadGraph5} $EWK~ qqZZjj$ samples.
 
 The electroweak $EWK~qqZZjj$ samples generated by \textsc{POWHEG-V2} do not have on-the-fly variations to evaluate the PDF uncertainty. Therefore, PDF uncertainty from the \textsc{MadGraph5} sample is taken as the PDF uncertainty for \textsc{POWHEG-V2} $EWK~qqZZjj$ samples.
 }
@@ -23,25 +23,25 @@ The uncertainty is related to the NLO QCD k-factor applied to the $ggZZ$ sample 
 }
 
 \item{\textbf{$t\bar{t}V$ $\&$ $VVV$ cross-sections:}
-The experimental uncertainties on recently published cross-section measurements of the $ttV$~\cite{ATLAS_ttV} and $WZZ$~\cite{ATLAS_VVV} processes by ATLAS are propagated for the analysis. On the entire $ttV$ process, a flat conservative variation of $15\%$ is applied, taken from the cross-section measurement of $ttZ$. Similarly, for $VVV$ conservative $10\%$ variation taken from the cross-section measurement of $WWZ$ is applied to the whole $VVV$ samples.
+The experimental uncertainties on recently published cross-section measurements of the $ttV$~\cite{ATLAS_ttV} and $WZZ$~\cite{ATLAS_VVV} processes by ATLAS are propagated for the analysis. On the entire $ttV$ process, a flat conservative variation of $15\%$ is applied, taken from the cross-section measurement of $ttZ$. Similarly, for $VVV$ conservative $10\%$ variation taken from the cross-section measurement of $WWZ$ is applied to the total $VVV$ samples.
 }
 
 \end{itemize}
 
-As shown above, the theoretical uncertainties are process specific and are evaluated separately for each MC sample. The theory uncertainties need to be propagated to the unfolded cross-section measurements. For each theory uncertainty, variation-applied particle and detector level yields are built by substituting the varied distribution for the selected process instead of the nominal one. The variation-applied detector level yield is unfolded using the unfolding inputs from nominal SM predictions. The difference between the unfolded result to the variation-applied truth MC yields gives systematic uncertainty for each variation. In general, the theoretical variations significantly affect the predicted particle-level and detector-level yields; however, they have a negligible impact on the shape of the distributions. Since the variation is applied to both detector and particle level yields, the resulting uncertainties from theory systematics on the unfolded cross-sections are small.
+As shown above, the theoretical uncertainties are process specific and are evaluated separately for each MC sample. The theory uncertainties need to be propagated to the unfolded cross-section measurements. For each theory uncertainty, variation-applied particle and detector-level predictions are built by substituting the varied distribution for the selected process instead of the nominal one. The variation-applied detector level prediction is unfolded using the unfolding inputs from nominal SM predictions. For each variation, the difference of variation-applied unfolded result from the variation-applied truth MC prediction gives the systematic uncertainty. In general, the theoretical variations significantly affect the predicted particle-level and detector-level predictions; however, they have a negligible impact on the shape of the distributions. Since the variation is applied to both detector and particle level yields, the resulting uncertainties from theory systematics on the unfolded cross-sections are small.
 
 \subsection{Experimental Uncertainties}
 \label{subsec:ExpUnc}
 The experimental uncertainties arise from the measurement of the energy and momentum scales of the reconstructed objects and the uncertainties on object reconstruction, identification, and selection efficiencies. The following category summarizes the sources of experimental uncertainties,
 
 \textbf{Jet Related Uncertainties: }
-The analysis requires two jets in the final state. Therefore, jet reconstruction and selection uncertainties are the measurement's most significant source of systematic experimental uncertainties. 
+The analysis requires two jets in the final state. Therefore, jet-related uncertainties resulting from jet reconstruction, calibration, and selection uncertainties are among the most significant sources of experimental systematic uncertainties. 
 
 \begin{itemize}
     \item{\textbf{Jet Reconstruction Uncertainty:}
-    The jet-related uncertainties associated with reconstruction and different steps of calibration discussed in Section \ref{subsec:ParticleRecon_Jets} are provided by ATLAS-supported tool $\textit{JetUncertainties}\footnote{https://twiki.cern.ch/twiki/bin/view/AtlasProtected/JetUncertainties}$. The tool provides several configurations for jet-related uncertainties adjusted to the various needs of several analyses. The measurement in this thesis uses $\textit{GlobalReduction\_FullJER}$ configuration with a total of $36$ uncertainties, each with upward and downward components, corresponding to $36\times2$ variations, $20\times 2$ variations are related to JES, and $13\times2$ to JER. $6\times 2$ of the $36 \times 2$ variations are related to the $\eta$ inter-calibration procedure, $4\times 2$ to the pile-up energy subtraction procedure, and $8 \times 2$ to the in-situ calibration of jets. Additional $1\times 2$ variations arise separately from the flavor composition, flavor response, a single particle response at high $p_{T}$, and possible punch-through effects.
+    The jet-related uncertainties associated with reconstruction and different steps of calibration discussed in Section \ref{subsec:ParticleRecon_Jets} are provided by ATLAS-supported tool $\textit{JetUncertainties}\footnote{https://twiki.cern.ch/twiki/bin/view/AtlasProtected/JetUncertainties}$. The tool provides several configurations for jet-related uncertainties adjusted to the various needs of several analyses. The measurement uses $\textit{GlobalReduction\_FullJER}$ configuration with a total of $36$ uncertainties, each with upward and downward components, corresponding to $36\times2$ variations, $20\times 2$ of which are related to JES, and $13\times2$ are related to JER. $6\times 2$ of the $36 \times 2$ variations are related to the $\eta$ inter-calibration procedure, $4\times 2$ to the pile-up energy subtraction step in jet calibration, and $8 \times 2$ to the in-situ calibration of jets. Additional $1\times 2$ variations arise separately each from the flavor composition, flavor response, a single particle response at high $p_{T}$, and possible punch-through effects.
     }
-    \item{\textbf{JVT $\&$ fJVT Uncertainties:} Additional sets of jet uncertainties ($1\times 2$) arising from the efficiencies of jet vertex selections, JVT, and fJVT cut requirements are also considered in the analysis. }
+    \item{\textbf{JVT $\&$ fJVT Uncertainties:} Additional sets of jet uncertainties ($1\times 2$) arising each from the efficiencies of jet vertex selections, JVT, and fJVT cut requirements are also considered in the analysis. }
 \end{itemize}
 
 An envelope of the $13$ JER uncertainty added in quadrature to an envelope of each of the other sources gives the final impact of jet-related uncertainties. 
@@ -58,7 +58,7 @@ tool $\textit{ElectronEffciencyCorrection} \footnote{https://gitlab.cern.ch/atla
     \item{\textbf{Electron Scale $\&$ Resolution:} The electron scale and resolution uncertainty is accounted for by two sets of nuisance parameters corresponding $2\times2$ variations. 
 
     }
-    \item{\textbf{Muon Scale $\&$ Resolution:} For muons resolution and scale uncertainties, there are $5$ sets of nuisance parameters, $2\times2$ corresponding to the muon momentum resolution as measured separately by the Inner Detector and the Muon Spectrometer. One set of nuisance parameters ($1\times 2$) corresponds to the uncertainties on the muon momentum scale, and two sets of $2\times 2$ are associated with the uncertainties in Sagitta correction.}
+    \item{\textbf{Muon Scale $\&$ Resolution:} For muons resolution and scale uncertainties, there are $5$ sets of nuisance parameters, $2\times2$ corresponding to the muon momentum resolution as measured separately by the inner detector and the muon spectrometer. One set of nuisance parameters ($1\times 2$) corresponds to the uncertainties on the muon momentum scale, and two sets of $2\times 2$ are associated with the uncertainties in Sagitta correction.}
 \end{itemize}
 
 \textbf{Other Experimental Uncertainties: }
@@ -67,17 +67,17 @@ tool $\textit{ElectronEffciencyCorrection} \footnote{https://gitlab.cern.ch/atla
     \item{\textbf{Luminosity:} As discussed in Section \ref{subsec:Dataset}, the uncertainty in the collected integrated luminosity of $139 fb^{-1}$ is $\pm1.7\%$, which is applied as a flat variation to both particle and detector level yields. } 
 \end{itemize}
 
-The experimental uncertainties affect all detector-level MC predictions and the estimate of the fake backgrounds. The experimental uncertainties need to be propagated to the unfolded cross-sections. For each systematic variation, a detector-level signal ($qqZZ+ggZZ+EWK~qqZZjj$) and background ($ttV+VVV$) distribution, a variation applied prediction is built. The variation is also applied to the fake background estimate. The variation-applied background MC and fake backgrounds are subtracted from the variation-applied total MC prediction and then unfolded using the unfolding inputs from the nominal SM prediction. The individual systematic uncertainty corresponds to the difference between the variation-applied and nominal unfolded distributions for each variation.  
+The experimental uncertainties affect all detector-level MC predictions and the estimate of the fake backgrounds. The experimental uncertainties are propagated to the unfolded cross-sections. For each systematic variation, signal ($qqZZ+ggZZ+EWK~qqZZjj$) and background ($ttV+VVV$) distribution variation-applied detector-level prediction is built. The variation is also applied to the fake background estimate. The variation-applied background (MC + fakes) are subtracted from the variation-applied total MC prediction and then unfolded using the unfolding inputs from the nominal SM prediction. The individual systematic uncertainty corresponds to the difference between the variation-applied and nominal unfolded distributions for each variation.  
 
 \subsection{Unfolding Uncertainties}
 \label{subsec:UnfoldingUnc}
 The following two uncertainties are intrinsic to the unfolding process itself and are included in the uncertainties for the unfolded differential cross-sections.
 
 \begin{itemize}
-    \item{\textbf{Unfolding Bias:} The inherent unfolding bias can be estimated either using the data-driven method discussed in Section \ref{subsec:Bias} or using an MC-toy-based method. It is the most significant source of systematic uncertainty for the measurement. Both methods yield similar results. However, the MC-toy-based method is free from the influence of statistical fluctuation in data and thus is chosen to assign the systematic uncertainty on the intrinsic unfolding bias. 
+    \item{\textbf{Unfolding Bias:} The inherent unfolding bias can be estimated either using the data-driven method discussed in Section \ref{subsec:Bias} or using an MC-toy-based method. It is the most significant source of systematic uncertainty for the measurement. Both methods yield similar results. However, the MC-toy-based method is free from the influence of statistical fluctuation in data and thus is chosen as the systematic uncertainty on the intrinsic unfolding bias. 
 
-    First, ten thousand toys are constructed from the truth level MC distribution, independently fluctuating each bin of the truth distribution with a random number extracted from a Gaussian with mean zero and variance of $N_{truth}^{bin}$. A pseudo detector level dataset is created by \textit{folding} using the nominal response from MC. Folding is a technique to create a detector level distribution from the MC by applying the detector's limited acceptance and inefficiencies, adding detector resolution-induced bin migration between the truth and detector level distributions, and including the contribution of the fiducial fakes. The pseudo dataset is then unfolded using the nominal unfolding inputs and plotted as the average bias of the toys as a function of the toy's truth-level yield. The final unfolding bias is the value where this distribution intersects with the $68.3\%$ confidence interval of the toys' true value. Figure \ref{fig:UnfoldingBias_mjj_VBSEnhanced} shows the unfolding bias evaluated in each bin of $m_{jj}$ in the VBS Enhanced region, estimated using the MC-toy-based approach. The unfolding bias ranges from $8-15\%$ in different bins, similar to what was observed using the data-driven method. 
-699
+    First, ten thousand toys are constructed from the truth level MC distribution, independently fluctuating each bin of the truth distribution with a random number extracted from a Gaussian with mean zero and variance of $N_{truth}^{bin}$. A pseudo-detector-level dataset is created by \textit{folding} using the nominal response from MC. Folding is a technique to create a detector level distribution from the MC by applying the detector's limited acceptance and inefficiencies, adding detector resolution-induced bin migration between the truth and detector level distributions, and including the contribution of the fiducial fakes. The pseudo dataset is then unfolded using the nominal unfolding inputs and plotted as the average bias of the toys as a function of the toy's truth-level yield. The final unfolding bias is the value where this distribution intersects with the $68.3\%$ confidence interval of the toys' actual value. Figure \ref{fig:UnfoldingBias_mjj_VBSEnhanced} shows the unfolding bias evaluated in each bin of $m_{jj}$ in the VBS-Enhanced region, estimated using the MC-toy-based approach. The unfolding bias ranges from $8-15\%$ in different bins.%, similar to what was observed using the data-driven method. 
+
     \begin{figure}[htb]
         \centering
         \begin{subfigure}{.48\textwidth}
@@ -110,13 +110,13 @@ The following two uncertainties are intrinsic to the unfolding process itself an
 
     }
 
-    \item{\textbf{QCD $qqZZ$ Modeling Uncertainty:} There are known differences between different generators driven by differences in parton shower and hadronization. Therefore, the second source of unfolding systematics is required to account for the differences in the unfolding input modeling for the dominant $qqZZ$ process. To avoid double-counting of the unfolding method covered by the data-driven uncertainties, an alternative $qqZZ$ sample predicted by \textsc{MadGraph5} is first reweighted to match the nominal-\textsc{Sherpa} lineshape. The relative difference in reweighted detector-level distribution is unfolded using the inputs from nominal-\textsc{Sherpa} and compared with the reweighted-\textsc{MadGraph5} particle level distribution. The relative difference between these two distributions is taken as modeling systematic uncertainty. Figure \ref{fig:QCDModelUnc} shows the estimation of the modeling uncertainty for $m_{jj}$ in the VBS-Enhanced region. The ratio panel of the right plot shows the QCD modeling uncertainties, which range from $2-4\%$ varying in different bins.
+    \item{\textbf{QCD $qqZZ$ Modeling Uncertainty:} There are known differences in predictions from different generators caused by differences in parton shower and hadronization modeling. Therefore, the second source of unfolding systematics is required to account for the differences in the unfolding input modeling, which is estimated by varying the prediction of the dominant QCD $qqZZ$ process. To avoid double-counting of the unfolding method covered by the unfolding bias, an alternative $qqZZ$ sample predicted by \textsc{MadGraph5} is first reweighted to match the nominal-\textsc{Sherpa} lineshape. The relative difference in reweighted detector-level distribution is unfolded using the inputs from nominal-\textsc{Sherpa} and compared with the reweighted-\textsc{MadGraph5} particle-level distribution. The relative difference between these two distributions is taken as modeling systematic uncertainty. Figure \ref{fig:QCDModelUnc} shows the estimation of the modeling uncertainty for $m_{jj}$ in the VBS-Enhanced region. The ratio panel of the right plot shows the QCD modeling uncertainties, which range from $2-4\%$ varying in different bins.
     
     \begin{figure}
         \centering
         \includegraphics[width=.48\linewidth]{figures/Analysis/Systematics/QCDmodel_Dist.pdf}
         \includegraphics[width=.48\linewidth]{figures/Analysis/Systematics/QCDmodel_Unc.pdf}
-        \caption{The left plot shows three distributions of $m_{jj}$ in VBS-Enhanced region at detector-level, red corresponding to SM predictions where $qqZZ$ is taken from \textsc{Sherpa}, yellow shows the same but $qqZZ$ is taken from \textsc{MadGraph5} and black shows the reweighted-\textsc{MadGraph5} distribution to match the \textsc{Sherpa} lineshape. The right plot shows reweighted-\textsc{MadGraph5} detector-level (blue) distribution, which is unfolded (black) using unfolding inputs from nominal-\textsc{Sherpa} and compared to the particle-level reweighted-\textsc{MadGraph5} distribution (red). The ratio panel of the right plot showing the ratio between reweighted truth-level \textsc{MadGraph5} and reweighted unfolded-level \textsc{MadGraph5} gives the QCD modeling uncertainties. \label{fig:QCDModelUnc}}
+        \caption{The left plot shows detector level predictions of $m_{jj}$ in VBS-Enhanced region predicted by \textsc{Sherpa}, \textsc{Madgraph} and \textsc{Madgraph} reweighted to match the \textsc{Sherpa} lineshape. The right plot shows reweighted-\textsc{MadGraph5} detector-level (blue) distribution, which is unfolded (black) using unfolding inputs from nominal-\textsc{Sherpa} and compared to the particle-level reweighted-\textsc{MadGraph5} distribution (red). The ratio panel of the right plot showing the ratio between reweighted truth-level \textsc{MadGraph5} and reweighted unfolded-level \textsc{MadGraph5} gives the QCD modeling uncertainties. \label{fig:QCDModelUnc}}
  \end{figure}  
 
     }
@@ -128,7 +128,7 @@ There are additional sources of uncertainties from the data-driven estimate of t
 
 \subsection{Statistical Uncertainties}
 \label{subsubsec:StatUnc}
-The statistical uncertainty from the reconstructed data needs to be propagated to the estimated unfolded yield. Equation \ref{eqn:BayesianUnfolding} gives the unfolded yield for a target bin i with a single iteration. As the background subtracted detector yields are filled event by event, the reconstruction distribution is uncorrelated. However, as shown by the equation, an unfolded yield in one single bin depends on all detector-level bins due to the resolution effects via bin migration. Therefore, the statistical uncertainty on the unfolded yield is a combination of the uncertainties in detector-level bins and uncertainties on the migration probabilities, which takes the covariance between the detector-level bins into account. The statistical uncertainties at the unfolded level are evaluated by the \textit{RooUnfold} package, which propagates both of these uncertainties.
+The statistical uncertainty from the recorded data needs to be propagated to the estimated unfolded yield. Equation \ref{eqn:BayesianUnfolding} gives the unfolded yield for a target bin i with a single iteration. As the background subtracted detector yields are filled event by event, the detector-level distribution is uncorrelated between any two bins. However, as shown by the equation, an unfolded yield in one single bin depends on all detector-level bins due to the resolution effects via bin migration. Therefore, the statistical uncertainty on the unfolded yield is a combination of the uncertainties in detector-level bins and uncertainties on the migration probabilities, which takes the covariance between the detector-level bins into account. The statistical uncertainties at the unfolded level are evaluated by the \textit{RooUnfold} package, which propagates both of these uncertainties.
 
 \subsection{Breakdown of Uncertainties }
 \label{subsec:SysUncBreakdown}
@@ -159,14 +159,14 @@ Total & 14.0 & 14.2 & 15.1 & 14.1 & 12.4\\
 \caption{Breakdown of the relative systematic uncertainties ($\%$) for each bin of $\mjj$ in the VBS-Enhanced region. \label{tab:systematics_mjj_VBS_Enhanced}}
 \end{table}
 
-Figure \ref{fig:sys_mjj_VBS_Enhanced_total} schematically shows different types of uncertainties affecting the measurements in the VBS-Enhanced region as a function of $m_{jj}$. The solid black line represents the total statistical uncertainty and has the most significant impact in all bins. Total systematic uncertainty, represented by the dashed black line, combines all systematic uncertainties. Depending on the bin, it is dominated either by unfolding bias or jet-related uncertainties. Figure \ref{fig:sys_mjj_VBS_Enhanced_jet} shows the impact of different categories of the jet systematic uncertainties. In most bins of $m_{jj}$, the dominant jet uncertainties are from the pile-up energy correction step in the jet calibration. The uncertainties from jet eta-dependent calibration and jet energy resolution are also significant. Overall, the jet reconstruction uncertainties have about $8-9\%$ effect on each bin of the unfolded cross-sections.
+Figure \ref{fig:sys_mjj_VBS_Enhanced_total} schematically shows different types of uncertainties affecting the measurements in the VBS-Enhanced region as a function of $m_{jj}$. The solid black line represents the total statistical uncertainty which is dominant in all bins. Total systematic uncertainty, represented by the dashed black line, is the combination of all systematic uncertainties. Depending on the bin, it is dominated either by unfolding bias or jet-related uncertainties. Figure \ref{fig:sys_mjj_VBS_Enhanced_jet} shows the impact of different categories of the jet-related systematic uncertainties on the unfolded differential cross-sections. In most bins of $m_{jj}$, the dominant jet uncertainties are from the pile-up energy correction step in the jet calibration. The uncertainties from jet eta-dependent calibration and jet energy resolution are also significant. Overall, the jet reconstruction uncertainties have about $8-9\%$ effect on each bin of the unfolded cross-sections.
 
 \begin{figure}[!htb]
     \centering
     \begin{subfigure}{.48\textwidth}
         \centering
         \includegraphics[width=.98\linewidth]{figures/Analysis/Systematics/systematics_VBS_Enhanced.pdf}
-        \caption{ Statistical and systematic uncertainties affecting the differential cross-section measurements. \label{fig:sys_mjj_VBS_Enhanced_total}}
+        \caption{ Statistical and systematic uncertainties affecting differential cross-sections. \label{fig:sys_mjj_VBS_Enhanced_total}}
     \end{subfigure}
     \begin{subfigure}{.48\textwidth}
         \centering
